--- a/RecMobile/Info.plist
+++ b/RecMobile/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>msjl.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.moshoujingli.homerec</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
